Fix javadoc phase